docs: warm-tier cache story across module READMEs and design-notes
Folds the doc layout to a single rule: the canonical artifact is
CacheConfig.java in vector-store-core, so the cache parameter reference
lives in vector-store-core/README. Sibling READMEs link to it for the
key list and keep only their implementation-specific tuning notes.
docs/design-notes.md keeps the policy semantics (architectural) and
drops the parameter table (operational).

- vector-store-core/README: new "Cache configuration reference" - the
  definitive table of every vectorstore.cache.* key with type, default,
  range, and tuning intent. Per-cache subsections for block, sidecar,
  manifest, segment-handle. Per-index policy (RESIDENT/SMART/MINIMAL)
  summary and the metrics surface.
- docs/design-notes.md: cache section now lists the four caches with
  one-line descriptions and links to the core reference for the keys.
  Per-index policy semantics retained because they are architectural.
- vector-store-storage/README: section renamed from "Block cache sizing"
  to "Block cache behaviour"; key enumeration replaced with a link to
  core. Implementation tuning (block size, FFM arena, L1<->L2 promotion,
  MINIMAL bypass) kept verbatim.
- vector-store-metadata/README: same shape - "Sidecar cache behaviour",
  link to core, implementation tuning kept.
- vector-store-engine/README: SegmentHandleCache description gains a
  link to the core reference. cachePolicy + cacheBytes added to the
  IndexBuildParams table; CachePolicyEnforcer surfaced under search/;
  SegmentHandleCache pin/unpin documented; resident.* gauges and the
  cache hit/miss/eviction counter family added to the observability
  table; query pipeline gains the enforcer step.
- README (root): phase plan now lists the warm-tier surfaces shipped.

mvn verify is green across all modules.